# etl_enrichment_pipline

./: .coverage  .env.example  .env.template  .gitignore  AGENTS.md  README.md  SETUP.md  docker-compose.yml  extractor.py  main.py  pyproject.toml
.omo/drafts/: agents-enrichment-implementation.md  project-infrastructure-setup.md
.omo/evidence/: task-10-project-infrastructure-setup.txt  task-2-project-infrastructure-setup.txt  task-3-project-infrastructure-setup.txt  task-4-project-infrastructure-setup.txt  task-6-project-infrastructure-setup.txt  task-7-project-infrastructure-setup.txt  task-8-project-infrastructure-setup.txt
.omo/plans/: agents-enrichment-implementation.md  project-infrastructure-setup.md
.omo/run-continuation/: ses_11179f4beffeAC73rGNQu3PRQ0.json  ses_111bcbb12ffel4Zusk1frLVwbj.json
config/: config_global.py  config_mysql.py  config_postgres.py  mariadb.yaml  oracle.yaml  postgres.yaml  sqlite.yaml  sqlserver.yaml
docs/: nl2sql-architecture-files.md
docs/plan/: ETL_Schema_Agent_Master_Plan.md
enrichment/: ETL_Schema_Agent_Master_Plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DatabaseSelectorModal.tsx  NewsletterOverlay.tsx
frontend/src/config/: databases.tsx
frontend/src/lib/: schema-adapter.ts
frontend/src/models/: metadata.ts
output/: enriched_metadata.json  enriched_metadata_bak.json  parsed_schema.json  pipeline_output.txt  pipline_output.txt
scratch/: old_extraction_agent.py
scripts/: generate_embeddings.py
sql_json/: postgres_crew_20260626_155716.json  postgres_ddl_20260625_123115.json  postgres_ddl_20260625_144403.json  postgres_dream_shops_20260624_135019.json  postgres_dream_shops_20260627_124012.json  postgres_enriched_20260625_143256.json  postgres_horizon_grs_20260626_165546.json  postgres_schema_20260625_114222.json  postgres_schema_20260625_140314.json  postgres_schema_20260625_163049.json  sample_schema.sql  sqlite_test.db_20260624_122801.json
sqlj_son/: metadata_ground.json  raw_metadata.json  sample_schema.sql
sqlj_son/output/: sample_schema.json
src/etl_enrichment_pipeline/: __init__.py
tests/: conftest.py  test_api.py  test_models.py  test_pipeline.py
tests/integration/: test_nl2sql_pipeline.py
tests/unit/: test_context_builder.py  test_embedding_service.py  test_graph_store.py  test_nl2sql_generator.py  test_sql_validator.py  test_vector_store.py
(+71 files in other folders)
