[project]
name = "etl-enrichment-pipeline"
version = "0.1.0"
description = "AI-powered ETL Schema Intelligence Platform"
readme = "README.md"
authors = [
    { name = "Akshay B", email = "akshay2642005@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "mysql-connector-python>=9.7.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "simple-ddl-parser>=1.13.0",
    "sqlglot>=30.11.0",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]
